<resources>
    <string name="app_name">Budgeter</string>
    <string name="title_new_spend">Nouvelle dépense</string>
    <string name="new_spend_textfield_title_hint_text">Intitulé</string>
    <string name="new_spend_textfield_amount_hint_text">Montant</string>
    <string name="new_spend_textfield_category_hint_text">Catégorie</string>
    <string name="new_spend_textfield_comment_hint_text">Commentaires</string>
    <string name="new_spend_btn_save_text">Enregistrer</string>
    <string name="new_spend_separator_text">ou</string>
    <string name="new_spend_scan_ticket_text">Scanner un reçu</string>
    <string name="title_spend_list">Ma liste de dépenses</string>
    <string name="next">Suivant</string>
    <string name="skip">Passer</string>
    <string name="back">Retour</string>
    <string name="go">C\'est parti !</string>
    <string name="first_intro_text">Gérez votre budget comme un pro</string>
    <string name="second_intro_text">Soyez informé des réductions et promotions sur le marché</string>
    <string name="Mes_stats_txt">Mes stats</string>
    <string name="bilan_annuel_txt">2000,00€ </string>
    <string name="bilan_janvier_txt">Janvier</string>
    <string name="bilan_Fevrier_txt">Fevrier</string>
    <string name="bilan_Mars_txt">Mars</string>
    <string name="bilan_Avril_txt">Avril</string>
    <string name="bilan_Mai_txt">Mai</string>
    <string name="bilan_juin_txt">Juin</string>
    <string name="bilan_juillet_txt">Juillet</string>
    <string name="bilan_aout_txt">Aout</string>
    <string name="bilan_septembre_txt">Septembre</string>
    <string name="bilan_octobre_txt">Octobre</string>
    <string name="bilan_novembre_txt">Novembre</string>
    <string name="bilan_decembre_txt">Decembre</string>

</resources>