<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/background_color"
		tools:context=".spend.NewSpendActivity">
	
	<ImageButton
			android:id="@+id/backToHome"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_gravity="center"
			android:layout_marginLeft="15dp"
			android:background="@drawable/icon_back"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginTop="4pt"/>
	
	<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/title_new_spend"
			android:textSize="12pt"
			android:fontFamily="@font/cutive"
			android:textColor="@color/customColorBlue"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginTop="5pt"/>
	
	<EditText
			android:id="@+id/spend_title"
			android:layout_width="130pt"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/title"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginTop="10pt"
			android:fontFamily="@font/cutive"
			android:hint="@string/new_spend_textfield_title_hint_text"
			android:background="@drawable/edittext_style"/>
	<EditText
			android:id="@+id/spend_amount"
			android:layout_width="130pt"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/spend_title"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginTop="5pt"
			android:fontFamily="@font/cutive"
			android:hint="@string/new_spend_textfield_amount_hint_text"
			android:background="@drawable/edittext_style"/>
	<EditText
			android:id="@+id/spend_category"
			android:layout_width="130pt"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/spend_amount"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginTop="5pt"
			android:fontFamily="@font/cutive"
			android:hint="@string/new_spend_textfield_category_hint_text"
			android:background="@drawable/edittext_style"/>
	<EditText
			android:id="@+id/spend_comment"
			android:layout_width="130pt"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/spend_category"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginTop="5pt"
			android:fontFamily="@font/cutive"
			android:hint="@string/new_spend_textfield_comment_hint_text"
			android:background="@drawable/edittext_style"/>
	<Button
			android:id="@+id/btnSave"
			android:layout_width="80pt"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/spend_comment"
			android:layout_marginTop="5pt"
			android:textAllCaps="false"
			android:textSize="18dp"
			android:fontFamily="@font/cutive"
			android:text="@string/new_spend_btn_save_text"
			android:textColor="@color/customColorWhite"
			app:layout_constraintCircleRadius="10dp"
			android:background="@color/customColorBlue"/>
	
	<RelativeLayout
			android:id="@+id/separator"
			android:layout_width="150pt"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@id/btnOCR"
			app:layout_constraintTop_toBottomOf="@id/btnSave">
		
		<TextView
				android:id="@+id/tvText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:fontFamily="@font/cutive"
				android:text="@string/new_spend_separator_text"
				android:textColor="@color/customColorBlue"/>
		
		<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_centerVertical="true"
				android:layout_marginLeft="16dp"
				android:layout_toLeftOf="@id/tvText"
				android:background="@color/customColorBlue"/>
		
		<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_centerVertical="true"
				android:layout_marginRight="16dp"
				android:layout_toRightOf="@id/tvText"
				android:background="@color/customColorBlue"/>
	
	</RelativeLayout>
	
	<Button
			android:id="@+id/btnOCR"
			android:drawableTop="@drawable/icon_ocr"
			android:layout_width="70pt"
			android:layout_height="wrap_content"
			android:background="@drawable/btnimage_style"
			android:text="@string/new_spend_scan_ticket_text"
			android:textColor="@color/customColorBlue"
			android:fontFamily="@font/cutive"
			android:textAllCaps="false"
			android:textSize="15dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/separator"
			app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>