<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".intro.SecondIntroActivity">
	
	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/second_intro"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:scaleType="centerCrop"/>
	
	<TextView
			android:layout_width="120pt"
			android:layout_height="wrap_content"
			android:text="@string/second_intro_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginTop="32dp"
			android:textSize="30dp"
			android:fontFamily="@font/cutive"
			android:textColor="@color/customColorBlue"
			android:textAlignment="center"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="110dp"/>
	
	<Button
			android:id="@+id/btnGo"
			android:layout_width="50pt"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginBottom="32dp"
			android:layout_marginRight="32dp"
			android:text="@string/go"
			android:textColor="@color/customColorWhite"
			app:layout_constraintCircleRadius="10dp"
			android:background="@color/customColorBlue"/>
	
	<Button
			android:id="@+id/btnBack"
			android:layout_width="50pt"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginBottom="32dp"
			android:layout_marginLeft="32dp"
			android:text="@string/back"
			android:textColor="@color/customColorBlue"
			app:layout_constraintCircleRadius="10dp"
			android:background="@color/customColorGray"/>
	
</androidx.constraintlayout.widget.ConstraintLayout>