<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/background_color"
        android:id="@+id/id_constraint1">

    <TextView
            android:id="@+id/id_txt_messtats"
            android:layout_width="150pt"
            android:layout_height="wrap_content"
            android:text="@string/Mes_stats_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="30dp"
            android:fontFamily="@font/cutive"
            android:textColor="@color/customColorBlue"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absoluteY="7dp"
            tools:layout_editor_absoluteX="30dp" />

    <TextView
            android:id="@+id/id_bilan_annuel"
            android:layout_width="150pt"
            android:layout_height="wrap_content"
            android:text="@string/bilan_annuel_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_txt_messtats"
            android:textSize="30dp"
            android:fontFamily="@font/cutive"
            android:textColor="@color/customColorBlue"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="44dp"
            app:layout_constraintHorizontal_bias="0.491" />


<LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/id_bilan_annuel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/customColorWhite"
        >

    <TextView
            android:id="@+id/id_bilan_janvier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bilan_janvier_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="30dp"
            android:textColor="@color/customColorBlue"
             />

</LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/customColorWhite"
            >

        <TextView
                android:id="@+id/id_bilan_fevrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bilan_Fevrier_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="30dp"
                android:textColor="@color/customColorBlue"
                />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
